# kb2040_radio_circuit

./: .gitignore  README.md  afsk_demod.py  circuit.md  code.py
kb2040_send/: circuit.md  code.py
receive/: _viperwolf_demod.c  afsk_demod.py  list_audio_devices.py  pyproject.toml  setup.py
receive/diagnostic_tools/: fdetect.c  fdetect.txt
receive/src/direwolf/: _fsk_demod.c  build_fsk.py
receive/src/direwolf/c/: demod_afsk.c  demod_afsk.h  direwolf.h  hdlc_rec.c  my_fsk.c  my_fsk.h  textcolor.c
receive/src/direwolf/c/include/: audio.h  demod_afsk.h  direwolf.h  dsp.h  fcs_calc.h  fsk_demod_state.h  hdlc_rec.h  rpack.h  textcolor.h
receive/src/direwolf/python/: fsk_wrapper.py
receive/src/viperwolf/: _viperwolf_demod.c  build_viperwolf.py
receive/src/viperwolf/build_viperwolf_temp/: _viperwolf_demod.c
receive/src/viperwolf/c/: demod_afsk.c  demod_factory.c  dsp.c
receive/src/viperwolf/c/include/: audio.h  demod_afsk.h  fsk_demod_state.h  fsk_gen_filter.h  my_fsk.h  textcolor.h  viperwolf.h
receive/src/viperwolf/python/: viperwolf_wrapper.py
