cd ~/git/kb2040_radio_circuit/receive
cat > pyproject.toml << 'EOF'
[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "cffi>=1.15.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "kb2040_radio_circuit"
version = "0.1.0"
description = "FSK modulation and demodulation for amateur radio using KB2040"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "Wayne Workman", email = "your.email@example.com"},
]
dependencies = [
    "numpy>=1.20.0",
    "sounddevice>=0.4.0",
    "cffi>=1.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "isort>=5.0",
]
EOF